Initial project structure

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Artyom Kolesen's diploma",
+  "name": "Dummy face recognition system",
   "version": "0.0.1",
   "description": "Diploma of the student of the Belarussian State University of Informatics And Radioelectronics",
   "main": "index.js",
