--- a/api/package.json
+++ b/api/package.json
@@ -2,14 +2,17 @@
   "name": "dummy-face-recognition-system-api",
   "version": "1.0.0",
   "description": "Api for Dummy face recognition system",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon *.js"
+    "start": "nodemon --exec 'node --debug src/server.js'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.11.0"
+  },
+  "dependencies": {
+    "express": "^4.14.1"
   }
 }
