--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "pug": "^2.0.0-beta11",
+    "stylus": "^0.54.5"
   }
 }
