--- a/web/src/motion.conf
+++ b/web/src/motion.conf
@@ -1,12 +1,12 @@
 framerate 15
-ffmpeg_cap_new on
-ffmpeg_cap_motion off
-ffmpeg_timelapse 0
-ffmpeg_timelapse_mode daily
-ffmpeg_bps 400000
-ffmpeg_variable_bitrate 0
-ffmpeg_video_codec ffv1 #Вот тут мы выбираем кодек которым мы будем сохранять видео
-ffmpeg_deinterlace off
+# ffmpeg_cap_new on
+# ffmpeg_cap_motion off
+# ffmpeg_timelapse 0
+# ffmpeg_timelapse_mode daily
+# ffmpeg_bps 400000
+# ffmpeg_variable_bitrate 0
+# ffmpeg_video_codec ffv1 #Выбор кодека, которым будет сохраняться видео
+# ffmpeg_deinterlace off
 max_mpeg_time 600
 text_right %Y-%m-%d\n%T
 text_changes off
@@ -26,3 +26,4 @@ control_html_output on
 quiet on
 output_pictures off
 thread thread1.conf
+thread thread2.conf
