--- a/motion/motion.conf
+++ b/motion/motion.conf
@@ -25,5 +25,5 @@ webcontrol_localhost off
 control_html_output on
 quiet on
 output_pictures off
-thread thread1.conf
-thread thread2.conf
+thread ./thread1.conf
+thread ./thread2.conf
