--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     restart: always
     volumes:
       - ./web:/usr/src/app
+
   api:
     build:
       context: api
@@ -16,3 +17,15 @@ services:
     restart: always
     volumes:
       - ./api:/usr/src/app
+
+  motion:
+    build:
+      context: motion
+    ports:
+      - 8081:8081
+      - 8082:8082
+    volumes:
+      - ./motion:/usr/src/app
+    devices:
+      - /dev/video0:/dev/video0
+    #   - /dev/video1:/dev/video1
