--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run lint && nodemon --exec 'node --debug src/server.js'",
-    "lint": "./node_modules/.bin/eslint src --fix"    },
+    "lint": "./node_modules/.bin/eslint src --fix"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -16,6 +17,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "johnny-five": "^0.10.6"
   }
 }
