--- a/api/src/motion/motion.conf
+++ b/api/src/motion/motion.conf
@@ -1,4 +1,4 @@
-framerate 15
+framerate 25
 # ffmpeg_cap_new on
 # ffmpeg_cap_motion off
 # ffmpeg_timelapse 0
@@ -17,13 +17,13 @@ jpeg_filename %v-%Y%m%d%H%M%S-%q
 movie_filename %Y.%m.%d/%H:%M:%S
 timelapse_filename %Y%m%d-timelapse
 stream_quality 100
-stream_maxrate 100
+stream_maxrate 50
 stream_localhost off
 stream_limit 0
 control_port 8080
 webcontrol_localhost off
 control_html_output on
 quiet on
-output_pictures off
+output_pictures off # take pictures mode
 thread ./thread1.conf
 thread ./thread2.conf
