--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "cors": "^2.8.3",
     "express": "^4.14.1",
     "pug": "^2.0.0-beta11",
     "stylus": "^0.54.5"
