--- a/api/src/motion/motion.conf
+++ b/api/src/motion/motion.conf
@@ -12,8 +12,9 @@ text_right %Y-%m-%d\n%T
 text_changes off
 text_event %Y%m%d%H%M%S
 text_double off
-snapshot_filename %v-%Y%m%d%H%M%S-snapshot
+snapshot_filename %Y%m%d%H%M%S-snapshot
 jpeg_filename %v-%Y%m%d%H%M%S-%q
+last_jpeg_filename lastshot
 movie_filename %Y.%m.%d/%H:%M:%S
 timelapse_filename %Y%m%d-timelapse
 stream_quality 100
