--- a/api/package.json
+++ b/api/package.json
@@ -17,10 +17,13 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "dclassify": "^1.1.2",
     "express": "^4.14.1",
     "johnny-five": "^0.10.6",
+    "opencv": "^6.0.0",
     "shelljs": "^0.7.7",
     "translit": "0.0.1"
   }
