--- a/api/src/motion/thread1.conf
+++ b/api/src/motion/thread1.conf
@@ -2,6 +2,7 @@ videodevice /dev/video0
 
 text_left = «Camera Color»
 target_dir ./Camera1
+snapshot_filename %Y%m%d%H%M%S-snapshot-cam-1
 stream_motion off
 stream_port 8081
 snapshot_interval 1
