--- a/api/src/motion/thread2.conf
+++ b/api/src/motion/thread2.conf
@@ -2,6 +2,7 @@ videodevice /dev/video1
 
 text_left = «Camera Color»
 target_dir ./Camera2
+snapshot_filename %Y%m%d%H%M%S-snapshot-cam-2
 stream_motion off
 stream_port 8082
-#snapshot_interval 10
+snapshot_interval 1
