--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run lint && nodemon --exec 'node --debug src/server.js'",
+    "start": "npm run lint && nodemon --exec 'node --inspect src/server.js'",
     "lint": "./node_modules/.bin/eslint src --fix"
   },
   "author": "",
