--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "cron-file-cleaner": "^1.1.0",
     "express": "^4.14.1",
     "johnny-five": "^0.10.6",
     "opencv": "^6.0.0"
